--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -30,7 +30,7 @@
         app:eventTextColor="@android:color/white"
         app:headerColumnBackground="#ffffffff"
         app:headerColumnPadding="8dp"
-        app:headerColumnTextColor="@android:color/black"
+        app:headerColumnTextColor="@android:color/white"
         app:headerRowBackgroundColor="@color/colorPrimary"
         app:headerRowPadding="12dp"
         app:hourHeight="60dp"
