--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -30,11 +30,11 @@
         app:eventTextColor="@android:color/white"
         app:headerColumnBackground="#ffffffff"
         app:headerColumnPadding="8dp"
-        app:headerColumnTextColor="@android:color/white"
+        app:headerColumnTextColor="@android:color/black"
         app:headerRowBackgroundColor="@color/colorPrimary"
         app:headerRowPadding="12dp"
         app:hourHeight="60dp"
-        app:noOfVisibleDays="3"
+        app:noOfVisibleDays="1"
         app:textSize="12sp"
         app:todayBackgroundColor="#1848adff"
         app:todayHeaderTextColor="@color/colorAccent" />
