--- a/app/src/main/res/layout/sleep_record_list_item.xml
+++ b/app/src/main/res/layout/sleep_record_list_item.xml
@@ -31,6 +31,14 @@
             android:textColor="@android:color/white" />
 
         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".1"
+            android:text="until"
+            android:textAlignment="center"
+            android:textColor="@android:color/white" />
+
+        <TextView
             android:id="@+id/list_item_end_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -42,8 +50,9 @@
             android:id="@+id/emoji_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".6"
-            android:gravity="right" />
+            android:layout_weight=".5"
+            android:gravity="right"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
 </LinearLayout>
