Added settings for the sleep quality notification, as well as the notification itself. Need to make it repeatable though.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -93,8 +93,10 @@
                         android:textAllCaps="false" />
 
                     <Button
+                        android:id="@+id/button_test_notification"
                         android:layout_width="@dimen/main_button_width"
                         android:layout_height="@dimen/main_button_height"
+                        android:text=" "
                         android:textAllCaps="false" />
 
                     <Button
