Sleep Stats up and running. This may move to just an overall stats screen and then each data will have only a chart?

--- a/app/src/main/res/layout/fragment_sleepdata_stats.xml
+++ b/app/src/main/res/layout/fragment_sleepdata_stats.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,21 +8,24 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.Activity_SleepData">
 
-    <RelativeLayout
+    <ListView
+        android:id="@+id/categories_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="10dp"
+        android:scrollbars="vertical">
 
-        <ListView
-            android:id="@+id/categories_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:scrollbars="vertical">
+    </ListView>
 
-        </ListView>
 
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@android:color/white" />
+</RelativeLayout>
 
