--- a/app/src/main/res/layout/fragment_add_edit_data_comparer_stat.xml
+++ b/app/src/main/res/layout/fragment_add_edit_data_comparer_stat.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
                 android:layout_weight=".3"
                 android:gravity="center"
-                android:paddingLeft="5dp"
                 android:text="Data 1"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -30,6 +30,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/add_physical_activity_textinput_height"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -45,6 +46,69 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/add_physical_activity_textinput_height"
                     android:layout_weight=".5" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/vbox_comparisontype"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".3"
+                    android:gravity="center"
+                    android:paddingLeft="5dp"
+                    android:text="Comparison"
+                    android:textAlignment="textStart"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/dropdown_comparisonType"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/add_physical_activity_textinput_height"
+                    android:layout_weight=".7" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/data_2_textview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight=".3"
+                android:gravity="center"
+                android:text="Data 2"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:visibility="visible" />
+
+            <LinearLayout
+                android:id="@+id/vbox_data2type"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/add_physical_activity_textinput_height"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <Spinner
+                    android:id="@+id/dropdown_data2_enum"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/add_physical_activity_textinput_height"
+                    android:layout_weight=".5" />
+
+                <Spinner
+                    android:id="@+id/dropdown_data2type"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/add_physical_activity_textinput_height"
+                    android:layout_weight=".5" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -76,80 +140,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@drawable/ic_check" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/checkbox_compareTwo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Compare two data types?" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/data_2_textview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight=".3"
-                android:gravity="center"
-                android:paddingLeft="5dp"
-                android:text="Data 2"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:visibility="gone" />
-
-            <LinearLayout
-                android:id="@+id/vbox_data2type"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/add_physical_activity_textinput_height"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <Spinner
-                    android:id="@+id/dropdown_data2_enum"
-                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/add_physical_activity_textinput_height"
-                    android:layout_weight=".5" />
-
-                <Spinner
-                    android:id="@+id/dropdown_data2type"
-                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/add_physical_activity_textinput_height"
-                    android:layout_weight=".5" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/vbox_comparisontype"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".3"
-                    android:gravity="center"
-                    android:paddingLeft="5dp"
-                    android:text="Comparison"
-                    android:textAlignment="textStart"
-                    android:textSize="18sp" />
-
-                <Spinner
-                    android:id="@+id/dropdown_comparisonType"
-                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/add_physical_activity_textinput_height"
-                    android:layout_weight=".7" />
-
             </LinearLayout>
 
         </LinearLayout>
