--- a/app/src/main/res/layout/fragment_class_scheduler.xml
+++ b/app/src/main/res/layout/fragment_class_scheduler.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/study_schedule"
+            android:id="@+id/class_schedule"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp"
@@ -20,7 +20,7 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_study_schedule"
+        android:id="@+id/add_class_schedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
